2008-07-24  Jonathan Gonzalez V.  <zeus@gnu.org>

	* caja.c (on_btn_cash_box_open_clicked)
	(on_btn_cash_box_close_clicked): Added functions to open and close
	the cash box using buttons from the main sell window.

	* ventas.c (ventas_win): Removed call to prepare_caja() at the end.
	(on_delete_ventas_gui): Deleted code that was asking to close the
	cash box if the user was the admin.

	* config_file.c (rizoma_get_value, rizoma_get_value_int)
	(rizoma_get_value_boolean, rizoma_get_double_list): Added check of
	DEBUG define to know if we must show an error message when a key
	isn't found on rizoma config file.

	* ventas.c (Descuento): Fixed some problem to calculate percent
	from an amount of money.
	Deleted some commented code.
	(DatosCheque): Deleted commented code.
	Deleted commented functions. TipoVenta() and FillDatosVenta().
	(ventas_win): Added function that must show cash_box buttons when
	the client has set to 1 the value of CAJA on rizoma config file.

2008-07-23  Jonathan Gonzalez V.  <zeus@gnu.org>

	* ventas.c (TipoVenta): Set the focus to entry_discount_money
	every time the window it's called.

	* utils.c (display_calendar): Added calendar_focus_out() to
	handler "focus-out-event" event, this will destroy the widget if
	the user release the focus of the calendar. Now display_calender
	sets the current date as the one on the entry if has one.

	* compras.c (on_btn_remove_buy_product_clicked): Added
	function. It must remove a product from the products buy list.
	(on_button_buy_clicked): Check if we really have products on the
	buy list.
	(Save): Added SearchPoroductHistory() FillFields() at the end to
	reflect changes on the proper tab.
	(on_buy_notebook_switch_page): Deleted some commented code.

2008-07-22  Jonathan Gonzalez V.  <zeus@gnu.org>

	* ventas.c (Descuento): Deleted commented code.
	(TipoVenta): Use clean_container() to clean up the container
	tipo_venta_win_venta.
	(Descuento): Fixed function to deal better with percent and money